src/test/ui/parser/mismatched-delim-brace-empty-block.stderr
error: unexpected close delimiter: `}`
  --> $DIR/mismatched-delim-brace-empty-block.rs:5:1
   |
LL |   fn main() {
   |  ___________-
LL | |
LL | | }
   | |_- this block is empty, you might have not meant to close it
LL |       let _ = ();
LL |   }
   |   ^ unexpected close delimiter

error: aborting due to previous error

