src/test/ui/parser/mismatched-delim-brace-empty-block.rs
fn main() {

}
    let _ = ();
} //~ ERROR unexpected close delimiter
